--- a/osa3/exercise 3.9-3.11/package.json
+++ b/osa3/exercise 3.9-3.11/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "build:ui": "rm -rf dist && cd \"../exercise 3.9-3.11\" && npm run build && cp -r dist \"../exercise 3.1-3.8/\"",
-    "deploy:full": "npm run build:ui && sudo git add . && sudo git commit -m uibuild && sudo git push"
+    "deploy:full": "npm run build:ui && cd ../../ && sudo git add . && sudo git commit -m 'uibuild' && sudo git push"
   },
   "dependencies": {
     "axios": "^1.8.4",
