--- a/osa3/exercise 3.1-3.22_Frontend/package.json
+++ b/osa3/exercise 3.1-3.22_Frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "build:ui": "rm -rf dist && cd \"../exercise 3.1-3.22_Frontend\" && npm run build && cp -r dist \"../exercise 3.1-3.22_Backend\"",
+    "build:ui": "rm -rf dist && cd \"../exercise 3.1-3.22 (Front)\" && npm run build && cp -r dist \"../exercise 3.1-3.22 (Backend)\"",
     "deploy:full": "npm run build:ui && cd ../../ && sudo git add . && sudo git commit -m 'uibuild' && sudo git push"
   },
   "dependencies": {
