--- a/osa3/exercise 3.1-3.22_Backend/package.json
+++ b/osa3/exercise 3.1-3.22_Backend/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Samuel21002/HU_Full_Stack_Assignments#readme",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "mongoose": "^8.13.2",
     "morgan": "^1.10.0"
   }
 }
