--- a/osa3/exercise 3.1-3.22_Backend/package.json
+++ b/osa3/exercise 3.1-3.22_Backend/package.json
@@ -28,7 +28,9 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@stylistic/eslint-plugin-js": "^4.2.0",
-    "eslint": "^9.24.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "globals": "^16.0.0"
   }
 }
