--- a/osa4/exercise 4.1-4.23_Backend/package.json
+++ b/osa4/exercise 4.1-4.23_Backend/package.json
@@ -9,6 +9,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0"
