--- a/osa8/exercise-backend/package.json
+++ b/osa8/exercise-backend/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@apollo/server": "^5.0.0",
-    "graphql": "^16.11.0"
+    "dotenv": "^17.2.1",
+    "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.5",
+    "mongoose-unique-validator": "^4.0.1"
   },
   "devDependencies": {
     "prettier": "3.6.2"
