Ninth assignment (Osa8.1-8.26)

--- a/osa8/exercise-backend/package.json
+++ b/osa8/exercise-backend/package.json
@@ -12,11 +12,18 @@
   },
   "dependencies": {
     "@apollo/server": "^5.0.0",
+    "@as-integrations/express4": "^1.1.2",
+    "@graphql-tools/schema": "^10.0.25",
+    "apollo-server-express": "^3.13.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "graphql": "^16.11.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^5.16.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "prettier": "3.6.2"
