--- a/osa8/library-frontend/package.json
+++ b/osa8/library-frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.6",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-proptypes": "^1.0.0",
