--- a/osa10/rate-repository-app/package.json
+++ b/osa10/rate-repository-app/package.json
@@ -10,16 +10,23 @@
     "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "@expo/metro-config": "~54.0.2",
     "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.0",
     "expo-constants": "~18.0.10",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "formik": "^2.4.6",
+    "graphql": "^16.11.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-web": "^0.21.0",
     "react-router-native": "^6.30.0",
+    "rxjs": "^7.8.2",
     "yup": "^1.7.1"
   },
   "devDependencies": {
