--- a/osa10/rate-repository-app/package.json
+++ b/osa10/rate-repository-app/package.json
@@ -27,6 +27,7 @@
     "@expo/metro-config": "~54.0.2",
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "dotenv": "^17.2.3",
     "expo": "~54.0.0",
     "expo-constants": "~18.0.10",
