--- a/.github/workflows/pipeline_osa11.yml
+++ b/.github/workflows/pipeline_osa11.yml
@@ -52,15 +52,6 @@ jobs:
         working-directory: ./osa11/exercise 4.1-4.23_Backend
         run: npm install
 
-      - name: Debug environment
-        working-directory: ./osa11/exercise 4.1-4.23_Backend
-        run: |
-          echo "NODE_ENV is: $NODE_ENV"
-          echo "TEST_MONGODB_URI is set: ${{ secrets.TEST_MONGODB_URI != '' }}"
-          echo "SECRET is set: ${{ secrets.SECRET != '' }}"
-          node -e "console.log('TEST_MONGODB_URI:', process.env.TEST_MONGODB_URI ? 'SET' : 'NOT SET')"
-          node -e "console.log('SECRET:', process.env.SECRET ? 'SET' : 'NOT SET')"
-
       - name: Test backend
         working-directory: ./osa11/exercise 4.1-4.23_Backend
         run: npm run tests:all
@@ -69,9 +60,12 @@ jobs:
         working-directory: ./osa11/exercise 4.1-4.23_Backend
         run: npm start &
         
+      - name: Wait for server to start
+        run: sleep 5
+        
       - name: Check MongoDB connection
         run: |
-          timeout 30 bash -c 'until curl -f http://localhost:3003/health; do sleep 1; done' || (echo "Health check failed" && exit 1)
+          curl -v http://localhost:${{ secrets.PORT }}/health || (echo "Health check failed" && exit 1)
       
       - name: Trigger deployment
         if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}
