--- a/.github/workflows/pipeline_osa11.yml
+++ b/.github/workflows/pipeline_osa11.yml
@@ -77,16 +77,7 @@ jobs:
         if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}
         run: |
           echo "Triggering Render deployment..."
-          echo "Service ID: srv-${{ secrets.RENDER_SERVICE_ID }}"
-          response=$(curl -s -w "\nHTTP_STATUS:%{http_code}" https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_KEY }})
-          echo "Full response: $response"
-          http_code=$(echo "$response" | grep "HTTP_STATUS" | cut -d':' -f2)
-          echo "HTTP Status Code: $http_code"
-          if [ -z "$http_code" ] || [ "$http_code" != "200" ]; then
-            echo "⚠️ Deployment may have failed. Check Render dashboard."
-          else
-            echo "✅ Deployment webhook triggered successfully!"
-          fi
+          curl -v https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_KEY }}
       - name: Build Status Notification
         uses: sarisia/actions-status-discord@v1
         if: always()
