--- a/.github/workflows/pipeline_osa11.yml
+++ b/.github/workflows/pipeline_osa11.yml
@@ -72,7 +72,7 @@ jobs:
           echo "Should deploy: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}"
       
       - name: Trigger deployment
-        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}
+        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT == 'true' }}
         run: |
           echo "Triggering Render deployment..."
           curl -v https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_KEY }}
@@ -97,7 +97,7 @@ jobs:
         with:
           fetch-depth: '0'
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}
+        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT == 'true' }}
         uses: anothrNick/github-tag-action@4ed44965e0db8dab2b466a16da04aec3cc312fd8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
