Testing merge #skip_2

--- a/.github/workflows/pipeline_osa11.yml
+++ b/.github/workflows/pipeline_osa11.yml
@@ -12,6 +12,9 @@ on:
     paths:
       - 'osa11/**'
 
+env:
+  SKIP_DEPLOYMENT: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
+
 jobs:
   deployment_pipeline:
     runs-on: ubuntu-latest
@@ -20,7 +23,6 @@ jobs:
       MONGODB_URI: ${{ secrets.MONGODB_URI }}
       SECRET: ${{ secrets.SECRET }}
       PORT: ${{ secrets.PORT }}
-      SKIP_DEPLOYMENT: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -73,9 +75,7 @@ jobs:
       
       - name: Trigger deployment
         if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}
-        run: |
-          echo "Triggering Render deployment..."z
-          curl -v https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_KEY }}
+        run: curl -v https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_KEY }}
       - name: Build Status Notification
         uses: sarisia/actions-status-discord@v1
         if: always()
@@ -90,8 +90,6 @@ jobs:
   tag_release:
     needs: [deployment_pipeline]
     runs-on: ubuntu-latest
-    env:
-      SKIP_DEPLOYMENT: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
     steps:
       - uses: actions/checkout@v4
         with:
