--- a/.github/workflows/pipeline_osa11.yml
+++ b/.github/workflows/pipeline_osa11.yml
@@ -23,6 +23,7 @@ jobs:
       MONGODB_URI: ${{ secrets.MONGODB_URI }}
       SECRET: ${{ secrets.SECRET }}
       PORT: ${{ secrets.PORT }}
+      SKIP_DEPLOYMENT: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -74,7 +75,7 @@ jobs:
           echo "Should deploy: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}"
       
       - name: Trigger deployment
-        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}
+        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != true }}
         run: curl -v https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_KEY }}
       - name: Build Status Notification
         uses: sarisia/actions-status-discord@v1
@@ -90,12 +91,14 @@ jobs:
   tag_release:
     needs: [deployment_pipeline]
     runs-on: ubuntu-latest
+    env:
+      SKIP_DEPLOYMENT: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != 'true' }}
+        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOYMENT != true }}
         uses: anothrNick/github-tag-action@4ed44965e0db8dab2b466a16da04aec3cc312fd8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
