--- a/osa13/package.json
+++ b/osa13/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^4.22.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.17.2",
     "sequelize": "^6.37.7"
   }
