--- a/osa13/package.json
+++ b/osa13/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.17.2",
     "sequelize": "^6.37.7"
   }
